Use the gitolite repositories instead of the old ones

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "click-brn"]
 	path = click-brn
-	url = ssh://gitsar/home/sombrutz/repository/click-brn
+	url = ssh://gitsar/click-brn
 [submodule "click-brn-scripts"]
 	path = click-brn-scripts
-	url = ssh://gitsar/home/sombrutz/repository/click-brn-scripts
+	url = ssh://gitsar/click-brn-scripts
 [submodule "helper"]
 	path = helper
-	url = ssh://gitsar/home/sombrutz/repository/helper
+	url = ssh://gitsar/helper
