add submodules: brn-ns2-click and ns-2.34

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "helper"]
 	path = helper
 	url = git@gitsar:helper
+[submodule "ns/src/ns-2.34"]
+	path = ns/src/ns-2.34
+	url = git@gitsar:ns-2.34
+[submodule "brn-ns2-click"]
+	path = brn-ns2-click
+	url = git@gitsar:brn-ns2-click
